# byok

./: .env.example  .gitignore  README.md  pyproject.toml
byok/: __init__.py
byok/cli/: main.py
byok/core/: classifier.py  doctor.py  evaluator.py  policy.py  registry.py  router.py  token_budget.py
byok/providers/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
byok/proxy/: server.py
byok/storage/: spend_tracker.py
config/: eval_scenarios.yaml  models.yaml  routing_policy.yaml
docs/: architecture.md
examples/: hermes_agent_integration.md
tests/: test_classifier.py  test_cli.py  test_doctor.py  test_evaluator.py  test_policy.py  test_proxy_fallback.py  test_router.py  test_spend_tracker.py  test_token_budget.py
