[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "byok"
version = "0.1.0"
description = "Intelligent model routing for AI agent frameworks. Bring Your Own Key."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
byok = "byok.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["byok"]
